--- a/DictionarySwiftUI/Resources/en.lproj/Localizable.strings
+++ b/DictionarySwiftUI/Resources/en.lproj/Localizable.strings
@@ -10,8 +10,12 @@
 // UInt - %llu
 // unbreakable space - \U2060 \U2060
 "test %lld" = "it is test number %lld";
-"UnknownError" = "неизвестная ошибка";
-"BadResponseError" = "Ошибка сервера";
-"NotConnectedError" = "нет подключения к сети";
-"BadURLError" = "некорректный URL адресс";
-"CustomError" = "непонятная ошибка";
+
+// MARK: Errors
+"UnknownError" = "unknown error";
+"BadResponseError" = "server error";
+"NotConnectedError" = "no network connection";
+"BadURLError" = "invalid url";
+"CustomError" = "an incomprehensible error";
+
+"NoTranslation" = "There is no translation";
